wdl-analysis/tests/validation/missing-call-input-unsupported.errors
error: unknown task or workflow `foo`
  ┌─ tests/validation/missing-call-input-unsupported:6:10
  │
6 │     call foo { foo = bar }
  │          ^^^

warning[UnusedCall]: unused call `foo`
  ┌─ tests/validation/missing-call-input-unsupported:6:10
  │
6 │     call foo { foo = bar }
  │          ^^^

error: omitting the `input` keyword in a call statement requires WDL version 1.2
  ┌─ tests/validation/missing-call-input-unsupported:6:16
  │
6 │     call foo { foo = bar }
  │                ^^^^^^^^^ missing an `input` keyword before this input
  │
  = fix: add an `input` keyword followed by a colon before any call inputs

error: unknown name `bar`
  ┌─ tests/validation/missing-call-input-unsupported:6:22
  │
6 │     call foo { foo = bar }
  │                      ^^^

